@@ -3,13 +3,15 @@
     xmlns:zcml="http://namespaces.zope.org/zcml"
     xmlns:browser="http://namespaces.zope.org/browser"
     xmlns:i18n="http://namespaces.zope.org/i18n"
+    xmlns:cache="http://namespaces.zope.org/cache"
     i18n_domain="collective.listingviews">
 
   <include package="plone.app.contentmenu" />
   <include package="Products.CMFCore" />
   <include package="plone.app.registry" />
   <include package="plone.app.z3cform" />
-
+  <include package="z3c.caching" file="meta.zcml" />
+  <include package="plone.app.caching" />
 
   <!-- Control panel -->
 
@@ -85,5 +87,18 @@
       name="listing_view_adapter"
       class=".base.BaseListingInformationRetriever"
       permission="zope2.View" />
+
+  <cache:ruleset
+      zcml:condition="not-have plone.content.dynamic"
+      for=".listing_view.ListingView"
+      ruleset="plone.content.folderView"
+      />
+
+  <cache:ruleset
+      zcml:condition="have plone.content.dynamic"
+      for=".listing_view.ListingView"
+      ruleset="plone.content.dynamic"
+      />
+      
 
 </configure>
